LOG/2024-11-20/21:11:51-build-debug_x86_64.LOG
==== Building spdlog (debug_x86_64) ====
==== Building TP (debug_x86_64) ====
main.cpp
Source/main.cpp: In function ‘int main(int, const char**)’:
Source/main.cpp:45:15: error: no matching function for call to ‘info(const char [14], <brace-enclosed initializer list>)’
   45 |   spdlog::info("LOG array: {}", {0,5,3,8,4,2,5,335,7});
      |   ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from Source/main.cpp:3:
Vendor/spdlog/include/spdlog/spdlog.h:168:13: note: candidate: ‘void spdlog::info(fmt::v9::format_string<T ...>, Args&& ...) [with Args = {}; fmt::v9::format_string<T ...> = fmt::v9::basic_format_string<char>]’
  168 | inline void info(format_string_t<Args...> fmt, Args &&...args)
      |             ^~~~
Vendor/spdlog/include/spdlog/spdlog.h:168:13: note:   candidate expects 1 argument, 2 provided
Vendor/spdlog/include/spdlog/spdlog.h:266:13: note: candidate: ‘template<class T> void spdlog::info(const T&)’
  266 | inline void info(const T &msg)
      |             ^~~~
Vendor/spdlog/include/spdlog/spdlog.h:266:13: note:   candidate expects 1 argument, 2 provided
make[1]: *** [TP.make:184: bin/obj/x86_64_Debug/main.o] Error 1
make: *** [Makefile:50: TP] Error 2
